# integer_partition

./: .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  README  README.md  gen.sh  remote.txt  test.cpp
demo/: CMakeLists.txt  main.cpp
etc/: benchmark.sh  datasets.csv  model_check.sh
naive/: CMakeLists.txt  naive.cpp
src/: CMakeLists.txt  CMakeListsFiles.txt  bernoulli.cpp  bernoulli.hpp  binomial.cpp  binomial.hpp  bootstrap.sh  checked_vector.hpp  debug.cpp  debug.hpp  definitions.cpp  definitions.hpp  faulhaber.cpp  faulhaber.hpp  interval_partition.cpp  interval_partition.hpp  intervalled_polynom.cpp  intervalled_polynom.hpp  macros.hpp  naive.hpp  parallel_partition.cpp  polynom.cpp  polynom.hpp  static_variables.cpp  sum_from_zero_cacher.hpp  sum_from_zero_threads.hpp  sum_from_zero_to_upper.cpp  sum_from_zero_to_upper.hpp  util.hpp
test/: CMakeLists.txt  basic_tests.cpp  benchmark.cpp  bin2.cpp  celero.cpp  celero.hpp  intpartrandom.hpp  partition_tests.cpp  random.hpp  tests.cpp
